--- a/.github/workflows/gh-cli.yml
+++ b/.github/workflows/gh-cli.yml
@@ -7,14 +7,20 @@ on:
 jobs:
   verify:
     runs-on: ubuntu-latest
+    permissions:
+      contents: read        # adjust as needed
+      pull-requests: write  # if you comment on PRs with gh
     steps:
       - uses: actions/checkout@v4
-      - uses: actions/setup-python@v4
+      - uses: actions/setup-python@v5
         with:
-          python-version: '3.x'
-      - uses: cli/gh-actions@v2
+          python-version: '3.11'
       - name: Check GitHub CLI
-        run: gh --version
+        env:
+          GH_TOKEN: ${{ github.token }}
+        run: |
+          gh --version
+          gh auth status
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
